--- a/PSExampleApp/PSExampleApp/Views/HomeView.xaml
+++ b/PSExampleApp/PSExampleApp/Views/HomeView.xaml
@@ -37,6 +37,7 @@
                 <Button Command="{Binding StartMeasurementCommand}" Text="{xct:Translate RunMeasurement}" />
                 <Button Command="{Binding OpenMeasurementListCommand}" Text="{xct:Translate MeasurementHistory}" />
                 <Button Command="{Binding OpenLoginPopupCommand}" Text="{xct:Translate ChangeUser}" />
+                <Button Command="{Binding OpenHeiCommand}" Text="HEI Button"/>
                 <Button
                     Command="{Binding ConfigureApplicationCommand}"
                     IsVisible="{Binding ActiveUserIsAdmin}"
