--- a/PSExampleApp/PSExampleApp/Views/MeasurementFinishedView.xaml
+++ b/PSExampleApp/PSExampleApp/Views/MeasurementFinishedView.xaml
@@ -54,6 +54,7 @@
                     Text="{xct:Translate ResultFor}"
                     VerticalOptions="Start" />
                 <Label Style="{StaticResource SmallTextStyle}" Text="{Binding ActiveMeasurement.Name}" />
+                <Label Style="{StaticResource SmallTextStyle}" Text="HEI EXAMPLE" />
 
                 <Label
                     Margin="0,30,0,0"
