Implemented plot of concentration over time

--- a/PSExampleApp/PSExampleApp/Views/HomeView.xaml
+++ b/PSExampleApp/PSExampleApp/Views/HomeView.xaml
@@ -36,8 +36,9 @@
                 VerticalOptions="StartAndExpand">
                 <Button Command="{Binding StartMeasurementCommand}" Text="{xct:Translate RunMeasurement}" />
                 <Button Command="{Binding OpenMeasurementListCommand}" Text="{xct:Translate MeasurementHistory}" />
+                <Button Command="{Binding OpenMeasurementHistoryPlotCommand}" Text="Measurement History Plot" />
                 <Button Command="{Binding OpenLoginPopupCommand}" Text="{xct:Translate ChangeUser}" />
-                <!--<Button Command="{Binding OpenQRScannerCommand}" Text="HEI Button"/>-->
+                 
                 <Button
                     Command="{Binding ConfigureApplicationCommand}"
                     IsVisible="{Binding ActiveUserIsAdmin}"
